aborting startup when JAVA_HOME is not set. addresses issue #44